2011-04-19 Javier Lanz <javier.lanz@artica.es>

	* godmode/modules/manage_network_components_form.php: Enabled port field
	on Network Components - Remote SNMP network agent
	* godmode/modules/manage_network_components_form_plugin.php: Added port
	field on Network Components - Plugin Components
	* include/functions_filemanager.php: Added a 'base64_encode' to deal with
	html entities in collection's files

2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged change from trunk.
	
	* operation/agentes/estado_monitores.php: added a toggle button to show the
	the entire value or sub string for value (by default).

2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Added a 'base64_encode' to deal with
	html entities in collection's files

	Fix: #3286063

2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Fixed a problem with html entities
	* include/get_file.php: Added base64_decode for getting a get parameter

	Fixes: #3286063

2011-04-14 Javier Lanz <javier.lanz@artica.es>

	* godmode/massive/massive_edit_modules.php: Added functionality to edit
	SNMP version on massive operations

2011-04-13 Sancho Lerena <slerena@artica.es>

	* operation/servers/view_server_detail.php,
	godmode/servers/manage_recontask.php,
	godmode/servers/manage_recontask_form.php: Fixes bug #3286027. Also implement
	the new "manual" mode for recon tasks.

2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* operation/events/events_list.php, operation/events/events.php: fixed
	nested forms incompatible with some browsers that fail when validate
	several events and some errors in javascript when validate individual error.

2011-04-3 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* pandora_console/godmode/modules/manage_network_templates.php: fixed the
	output of description and name, and fixed the buttons to delete and export.
